--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@types/multiparty": "^0.0.36",
+    "@vercel/blob": "^0.23.2",
+    "multiparty": "^4.2.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
