--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+MYSQL_URL="mysql://u671099578_android_blog:androidBl3ogger@89.117.188.103:3306/u671099578_android_blog"
